player commit